other/config/k8s/release/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: smarthome-simple-service-pod
  labels:
    app: smarthome-simple-service
spec:
  containers:
    - name: simple-service
      image: cr.selcloud.ru/smart-home/simple-service:2
      ports:
        - containerPort: 8080
  volumes:
    - name: kafka-storage
      persistentVolumeClaim:
        claimName: kafka-1-pv-claim
